# TestAgent-Project

./: .agentignore  .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATMR_Longtext.docx  Agent.md  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  README.md  README_ADAPTIVE_SYSTEM.md  alembic.ini  atmr_data.db  atmr_full_questions.json  atmr_test.db  check_feature_status.py  claude.md  cleanup_database.py  cleanup_db_simple.py  database.py  deploy_adaptive_system.py  docker-compose.yml  docker-entrypoint.sh  fetch_atmr_data.py  fix_stuck_sessions.py  generate_feature_vectors.py  import_data.py  migrate_database.py  migrate_to_postgresql.py  monitor_selection.py  optimize_pg_storage.py  package-lock.json  pyproject.toml  requirements_feature.txt  requirements_full.txt  requirements_multimodal.txt  requirements_server.txt  (+4 more)
PageIndex/: MinerU_markdown_ATMR_Longtext.md  ask.py  run_pageindex.py
agent/: debate_manager.py
alembic/: env.py
app/: main.py
docs/: DEPLOY.md  中期检查.txt  多模态人格论文分析新手指南.md  多模态数据忽略说明.md  工作日志.md  工作记录.md  工作记录_数据库与认证及测评流程改造.md  开发者日志.md  待完成任务.md  毕设开发目标和进度.md  毕设开发目标和进度_改写前备份.md  目前问题.md  评分标准.md  需求分析和概要设计.md
frontend/: .env.development.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
multimodal_personality/: README.md  __init__.py
scripts/: build_cfi_v2_manifest.py  build_clip_feature_jobs.py  check_feature_status.py  deploy_adaptive_system.py  extract_cfi_v2_test_videos.py  extract_clip_features.py  generate_feature_vectors.py  import_data.py  migrate_database.py  monitor_selection.py  (+1 more)
(+83 files in other folders)
