[project]
name = "testagent"
version = "0.1.0"
description = "ATMR 智能心理测评系统 - 基于多智能体辩论和自适应题目选择的 AI 心理测评"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "httpx==0.25.1",
    "requests==2.31.0",
    "numpy==1.24.3",
    "scikit-learn==1.3.2",
    "sentence-transformers==2.2.2",
    "pyautogen==0.2.14",
    "litellm==1.82.0",
    "pymupdf==1.26.4",
    "PyPDF2==3.0.1",
    "pyyaml==6.0.2",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "openai",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
feature = [
    "torch>=2.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["PageIndex/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "F401",    # unused import (common in __init__.py)
    "N806",    # variable name should be lowercase (database column conventions)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
